--- a/BankUnitTest/pom.xml
+++ b/BankUnitTest/pom.xml
@@ -12,6 +12,14 @@
             <version>4.13</version>
             <type>jar</type>
         </dependency>
+      <!-- Added as per project requirements (Eric) // -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.2</version>
+            <scope>test</scope>
+        </dependency>
+      <!-- // Added as per project requirements (Eric) -->
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
